# tigml

./: .gitignore  README.md  architecture.md  dune-project  makefile  notes  readme.md  results.txt  tigml.opam
_build/: .db  .digest-db  log
_build/default/: tigml.dune-package  tigml.install
_build/default/.dune/: configurator  configurator.v2
_build/default/.utop/: utop.ml-gen
_build/default/lib/: absyn.ml  lexer.ml  lexer.mll  parser.ml  parser.mli  parser.mly  parser__mock.ml.mock  parser__mock.mli.inferred  semant.ml  tigml.cma  tigml.cmxa  tigml.cmxs  tigml.ml-gen
_build/default/lib/.formatted/: syntax.ml
_build/default/lib/.merlin-conf/: lib-tigml
_build/default/lib/.tigml.objs/: parser__mock.impl.all-deps  parser__mock.impl.d  tigml__Absyn.impl.d  tigml__Env.impl.all-deps  tigml__Env.impl.d  tigml__Lexer.impl.all-deps  tigml__Lexer.impl.d  tigml__Parser.impl.all-deps  tigml__Parser.impl.d  tigml__Parser.intf.d  tigml__Semant.impl.all-deps  tigml__Semant.impl.d  tigml__Symbol.impl.d  tigml__Syntax.impl.d  tigml__Types.impl.all-deps  tigml__Types.impl.d
lib/: absyn.ml  dune  e2e_test.ml  env.ml  error.ml  escape.ml  findescape.ml  frame.ml  lexer.mll  pabsyn.ml  parser.mly  riscvframe.ml  riscvframe.mli  semant.ml  symbol.ml  symbol.mli  syntax.ml  temp.ml  temp.mli  test.ml  tiger.mll  translate.ml  translate.mli  tree.ml  tree.mli  types.ml  util.ml
test/: ast2.tig  ast3.tig  ast4.tig  ast5.tig  calc.calc  dune  runtest.ml  test2.tig  test51.tig
test_programs/: test50.tig  test52.tig  test53.tig  test54.tig  test55.tig
(+49 files in other folders)
