(library
 (name tigml)
 (inline_tests
  (deps
   (source_tree ../test_programs)))
 (preprocess
  (pps
   ppx_expect
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.map
   ppx_deriving.fold
   ppx_deriving.iter
   ppx_inline_test)))

(ocamllex lexer)

(menhir
 (modules parser))
